# linux-client

./: .gitignore  .gitmodules  CMakeLists.txt  GigaQt.pro  Makefile  README.md  check_message_types.py  example_config
assets/: assets.qrc
dev_scripts/: build.sh  fix_compile_commands.sh
include/ui/: authorizer.hpp  stylesheets.hpp  userinterface.hpp  widget.hpp
include/ui/mainwidgets/: gridscrollingwidget.hpp  messanger.hpp  undefinedpage.hpp
include/utils/: concepts_templates.hpp  message.hpp  messagegroup.hpp  misc_functions.hpp  properties.hpp  recentevent.hpp  settings_parser.hpp
rust/: Cargo.toml
rust/src/: lib.rs
source/: main.cpp  widget.cpp
source/mainwidgets/: messanger.cpp
source/utils/: message.cpp  message.h  nonewlineqlineedit.h  recentevent.h
src/: CMakeLists.txt  GigaQt.pro  authorizer.cpp  authorizer.h  main.cpp  stylesheets.cpp  stylesheets.h  userinterface.cpp  userinterface.h  widget.cpp  widget.h
src/data/: data.qrc  id_token
src/database/: wrappers.cpp  wrappers.h
src/mainwidgets/: gridscrollingwidget.cpp  gridscrollingwidget.h  messanger.cpp  messanger.h  undefinedpage.cpp  undefinedpage.h
src/ui/: authorizer.cpp  stylesheets.cpp  userinterface.cpp  widget.cpp
src/ui/mainwidgets/: gridscrollingwidget.cpp  messanger.cpp  undefinedpage.cpp
src/utils/: concepts_templates.h  message.cpp  message.h  messagegroup.cpp  messagegroup.h  misc_functions.cpp  misc_functions.h  nonewlineqlineedit.cpp  nonewlineqlineedit.h  properties.cpp  properties.h  recentevent.cpp  settings_parser.cpp
